// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ImageCard basic 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      accept={null}
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="image-hotspots"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Image"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Image
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--image-card__wrapper"
        >
          <div
            onBlur={[Function]}
            onMouseOut={[Function]}
            style={
              Object {
                "background": "#eee",
                "height": "100%",
                "overflow": "hidden",
                "position": "relative",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="Sample image"
              className="iot--image-card-img"
              id={null}
              onLoad={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              onMouseUp={[Function]}
              src="landscape.jpg"
              style={
                Object {
                  "cursor": "auto",
                  "height": "auto",
                  "left": undefined,
                  "objectFit": null,
                  "position": "relative",
                  "top": undefined,
                  "width": "auto",
                }
              }
            />
            <div
              data-testid="null-hotspots-container"
              style={
                Object {
                  "left": undefined,
                  "margin": "auto",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "right": "auto",
                }
              }
            >
              <div
                className="iot--hotspot-container iot--hotspot-container--has-icon iot--hotspot-container--is-fixed"
                data-testid="hotspot-35-65"
                icon="User"
                style={
                  Object {
                    "--height": 25,
                    "--width": 25,
                    "--x-pos": 35,
                    "--y-pos": 65,
                  }
                }
              >
                <div
                  aria-labelledby="hotspot-35-65"
                  className="bx--tooltip__label"
                  id="hotspot-35-65"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    style={
                      Object {
                        "color": "purple",
                      }
                    }
                  >
                    <svg
                      data-testid="card-icon"
                      fill="purple"
                      focusable="true"
                      height={25}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      tabIndex="0"
                      title="User"
                      viewBox="0 0 32 32"
                      width={25}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 4a5 5 0 11-5 5 5 5 0 015-5m0-2a7 7 0 107 7A7 7 0 0016 2zM26 30H24V25a5 5 0 00-5-5H13a5 5 0 00-5 5v5H6V25a7 7 0 017-7h6a7 7 0 017 7z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="iot--hotspot-container iot--hotspot-container--has-icon iot--hotspot-container--is-fixed"
                data-testid="hotspot-45-75"
                icon="Warning alt"
                style={
                  Object {
                    "--height": 25,
                    "--width": 25,
                    "--x-pos": 45,
                    "--y-pos": 75,
                  }
                }
              >
                <div
                  aria-labelledby="hotspot-45-75"
                  className="bx--tooltip__label"
                  id="hotspot-45-75"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    style={
                      Object {
                        "color": "red",
                      }
                    }
                  >
                    <svg
                      data-testid="card-icon"
                      fill="red"
                      focusable="true"
                      height={25}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      tabIndex="0"
                      title="Warning alt"
                      viewBox="0 0 32 32"
                      width={25}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 23a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 23zM15 12H17V21H15z"
                      />
                      <path
                        d="M29,30H3a1,1,0,0,1-.8872-1.4614l13-25a1,1,0,0,1,1.7744,0l13,25A1,1,0,0,1,29,30ZM4.6507,28H27.3493l.002-.0033L16.002,6.1714h-.004L4.6487,27.9967Z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "bottom": 10,
                  "pointerEvents": "auto",
                  "position": "absolute",
                  "right": 10,
                }
              }
            >
              <button
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "background": "#fff",
                    "border": "none",
                    "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                    "display": "flex",
                    "height": "25px",
                    "justifyContent": "center",
                    "width": "25px",
                  }
                }
                title="Zoom in"
                type="button"
              >
                +
              </button>
              <button
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "background": "#fff",
                    "border": "none",
                    "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                    "display": "flex",
                    "height": "25px",
                    "justifyContent": "center",
                    "width": "25px",
                  }
                }
                title="Zoom out"
                type="button"
              >
                -
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ImageCard custom renderIconByName 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      accept={null}
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="image-hotspots"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Image"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Image
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--image-card__wrapper"
        >
          <div
            onBlur={[Function]}
            onMouseOut={[Function]}
            style={
              Object {
                "background": "#eee",
                "height": "100%",
                "overflow": "hidden",
                "position": "relative",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="Sample image"
              className="iot--image-card-img"
              id={null}
              onLoad={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              onMouseUp={[Function]}
              src="landscape.jpg"
              style={
                Object {
                  "cursor": "auto",
                  "height": "auto",
                  "left": undefined,
                  "objectFit": null,
                  "position": "relative",
                  "top": undefined,
                  "width": "auto",
                }
              }
            />
            <div
              data-testid="null-hotspots-container"
              style={
                Object {
                  "left": undefined,
                  "margin": "auto",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "right": "auto",
                }
              }
            >
              <div
                className="iot--hotspot-container iot--hotspot-container--has-icon iot--hotspot-container--is-fixed"
                data-testid="hotspot-35-65"
                icon="arrowDown"
                style={
                  Object {
                    "--height": 25,
                    "--width": 25,
                    "--x-pos": 35,
                    "--y-pos": 65,
                  }
                }
              >
                <div
                  aria-labelledby="hotspot-35-65"
                  className="bx--tooltip__label"
                  id="hotspot-35-65"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    aria-hidden={true}
                    data-testid="card-icon"
                    fill="purple"
                    focusable="false"
                    height={25}
                    preserveAspectRatio="xMidYMid meet"
                    title=""
                    viewBox="0 0 32 32"
                    width={25}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
                    />
                    <title>
                      
                    </title>
                  </svg>
                </div>
              </div>
              <div
                className="iot--hotspot-container iot--hotspot-container--is-fixed"
                data-testid="hotspot-45-25"
                icon={null}
                style={
                  Object {
                    "--height": 25,
                    "--width": 25,
                    "--x-pos": 45,
                    "--y-pos": 25,
                  }
                }
              >
                <div
                  aria-labelledby="hotspot-45-25"
                  className="bx--tooltip__label"
                  id="hotspot-45-25"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    height={25}
                    width={25}
                  >
                    <circle
                      cx={12.5}
                      cy={12.5}
                      fill="none"
                      opacity="1"
                      r={11.5}
                      stroke="white"
                      strokeWidth="2"
                    />
                    <circle
                      cx={12.5}
                      cy={12.5}
                      fill="#0f0"
                      opacity="0.7"
                      r={11.5}
                      stroke="none"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="iot--hotspot-container iot--hotspot-container--is-fixed"
                data-testid="hotspot-45-50"
                icon={null}
                style={
                  Object {
                    "--height": 25,
                    "--width": 25,
                    "--x-pos": 45,
                    "--y-pos": 50,
                  }
                }
              >
                <div
                  aria-labelledby="hotspot-45-50"
                  className="bx--tooltip__label"
                  id="hotspot-45-50"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    height={25}
                    width={25}
                  >
                    <circle
                      cx={12.5}
                      cy={12.5}
                      fill="none"
                      opacity="1"
                      r={11.5}
                      stroke="white"
                      strokeWidth="2"
                    />
                    <circle
                      cx={12.5}
                      cy={12.5}
                      fill="#00f"
                      opacity="0.7"
                      r={11.5}
                      stroke="none"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="iot--hotspot-container iot--hotspot-container--has-icon iot--hotspot-container--is-fixed"
                data-testid="hotspot-45-75"
                icon="arrowUp"
                style={
                  Object {
                    "--height": 25,
                    "--width": 25,
                    "--x-pos": 45,
                    "--y-pos": 75,
                  }
                }
              >
                <div
                  aria-labelledby="hotspot-45-75"
                  className="bx--tooltip__label"
                  id="hotspot-45-75"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    aria-hidden={true}
                    data-testid="card-icon"
                    fill="blue"
                    focusable="false"
                    height={25}
                    preserveAspectRatio="xMidYMid meet"
                    title=""
                    viewBox="0 0 32 32"
                    width={25}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 24L4 15 5.414 13.586 13 21.171 26.586 7.586 28 9 13 24z"
                    />
                    <title>
                      
                    </title>
                  </svg>
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "bottom": 10,
                  "pointerEvents": "auto",
                  "position": "absolute",
                  "right": 10,
                }
              }
            >
              <button
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "background": "#fff",
                    "border": "none",
                    "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                    "display": "flex",
                    "height": "25px",
                    "justifyContent": "center",
                    "width": "25px",
                  }
                }
                title="Zoom in"
                type="button"
              >
                +
              </button>
              <button
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "background": "#fff",
                    "border": "none",
                    "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                    "display": "flex",
                    "height": "25px",
                    "justifyContent": "center",
                    "width": "25px",
                  }
                }
                title="Zoom out"
                type="button"
              >
                -
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ImageCard error 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      accept={null}
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="image-hotspots"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Image"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Image
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--empty-state"
          data-testid="EmptyState"
        >
          <div
            className="iot--empty-state--content"
          >
            <svg
              alt=""
              className="iot--empty-state--icon"
              data-testid="EmptyState-icon"
              height={80}
              width={80}
            >
              <defs>
                <linearGradient
                  id="emptystate-Error-icon_svg__a-errorIcon"
                  x1="40.83%"
                  x2="53.752%"
                  y1="147.026%"
                  y2="5.476%"
                >
                  <stop
                    offset="0%"
                    stopColor="#767676"
                  />
                  <stop
                    offset="100%"
                    stopColor="#FFF"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__b-errorIcon"
                  x1="44.373%"
                  x2="66.603%"
                  y1="97.685%"
                  y2="-9.503%"
                >
                  <stop
                    offset="0%"
                    stopColor="#FFF"
                  />
                  <stop
                    offset="100%"
                    stopColor="#FFF"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__c-errorIcon"
                  x1="45.733%"
                  x2="67.978%"
                  y1="91.053%"
                  y2="-16.135%"
                >
                  <stop
                    offset="0%"
                    stopColor="#939393"
                  />
                  <stop
                    offset="100%"
                    stopColor="#DCDCDC"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__d-errorIcon"
                  x1="-52.354%"
                  x2="72.326%"
                  y1="92.68%"
                  y2="51.331%"
                >
                  <stop
                    offset="0%"
                    stopOpacity={0.18}
                  />
                  <stop
                    offset="100%"
                    stopOpacity={0.05}
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__e-errorIcon"
                  x1="55.034%"
                  x2="40.155%"
                  y1="-24.481%"
                  y2="198.063%"
                >
                  <stop
                    offset="0%"
                    stopOpacity={0.2}
                  />
                  <stop
                    offset="100%"
                    stopOpacity={0.5}
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__f-errorIcon"
                  x1="39.23%"
                  x2="48.628%"
                  y1="121.252%"
                  y2="57.245%"
                >
                  <stop
                    offset="0%"
                    stopColor="#BEBEBE"
                  />
                  <stop
                    offset="100%"
                    stopColor="#D8D8D8"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__g-errorIcon"
                  x1="6.81%"
                  x2="49.062%"
                  y1="148.311%"
                  y2="26.577%"
                >
                  <stop
                    offset="0%"
                    stopColor="#CCC"
                  />
                  <stop
                    offset="100%"
                    stopColor="#FFF"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__h-errorIcon"
                  x1="50.263%"
                  x2="50.263%"
                  y1="63.049%"
                  y2="-84.145%"
                >
                  <stop
                    offset="2%"
                    stopColor="#CCC"
                  />
                  <stop
                    offset="100%"
                    stopColor="#EEE"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__i-errorIcon"
                  x1="9731.507%"
                  x2="9762.569%"
                  y1="17393.65%"
                  y2="17462.12%"
                >
                  <stop
                    offset="0%"
                    stopColor="#CCC"
                  />
                  <stop
                    offset="100%"
                    stopColor="#FFF"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__j-errorIcon"
                  x1="39.379%"
                  x2="47.452%"
                  y1="-82.789%"
                  y2="18.145%"
                >
                  <stop
                    offset="0%"
                    stopColor="#828282"
                  />
                  <stop
                    offset="100%"
                    stopColor="#C9C9C9"
                  />
                </linearGradient>
              </defs>
              <g
                fill="none"
                fillRule="nonzero"
              >
                <path
                  d="M27.333.84A2.98 2.98 0 0026.18.5a5.153 5.153 0 00-3.013.833A10.747 10.747 0 0020.2 4 15.147 15.147 0 0018 7.76L.933 51.64c-.5 1.25-.773 2.58-.806 3.927a5.06 5.06 0 00.8 2.973c.206.308.466.576.766.793l.134.08c.07.045.144.086.22.12l5.613 3.24a3.093 3.093 0 01-.94-.88 5.04 5.04 0 01-.8-2.78v-.193c.036-1.347.311-2.677.813-3.927l17.06-43.9A15.333 15.333 0 0126 7.273a10.767 10.767 0 012.967-2.606A7.74 7.74 0 0130 4.133a4.547 4.547 0 011.96-.3c.368.03.727.128 1.06.287L27.333.827V.84z"
                  fill="url(#emptystate-Error-icon_svg__a-errorIcon)"
                  transform="translate(14)"
                />
                <path
                  d="M28.667 1.587A3.16 3.16 0 0027.84.78a1.467 1.467 0 00-.2-.127l-.113-.06a3.193 3.193 0 00-1.06-.286 4.547 4.547 0 00-1.96.3 7.74 7.74 0 00-1.034.506A10.767 10.767 0 0020.5 3.747a15.333 15.333 0 00-2.2 3.82L1.207 51.447A11.167 11.167 0 00.4 55.373v.194c-.016.984.26 1.952.793 2.78.247.357.567.657.94.88.39.212.819.34 1.26.373a5.007 5.007 0 002.96-.787l34-19.673a10.973 10.973 0 003.007-2.667 14.433 14.433 0 002.173-3.793c.5-1.236.766-2.554.787-3.887a5.207 5.207 0 00-.773-3.006l-16.88-24.2z"
                  fill="url(#emptystate-Error-icon_svg__b-errorIcon)"
                  transform="translate(19.333 3.333)"
                />
                <path
                  d="M28.827 1.78A3.16 3.16 0 0028 .973a2 2 0 00-.2-.126l-.113-.06A3.04 3.04 0 0026.627.5a4.547 4.547 0 00-1.96.3 7.74 7.74 0 00-1.034.507 10.767 10.767 0 00-2.966 2.633 15.333 15.333 0 00-2.2 3.82L1.4 51.64a11.34 11.34 0 00-.814 3.927v.193c-.01.985.268 1.951.8 2.78a2.827 2.827 0 002.2 1.253 5.007 5.007 0 002.96-.786l34.027-19.674a10.973 10.973 0 003.007-2.666 14.433 14.433 0 002.173-3.794c.5-1.236.766-2.553.787-3.886A5.207 5.207 0 0045.767 26L28.827 1.78z"
                  fill="url(#emptystate-Error-icon_svg__c-errorIcon)"
                  transform="translate(19.333 3.333)"
                />
                <path
                  d="M2.26 18.607c-2.284 1.333-2.284 2.666 0 4l4.513 2.606a6.42 6.42 0 006.867 0l29.887-17.32c2.293-1.333 2.293-2.666 0-4l-4.514-2.56a6.433 6.433 0 00-6.873 0L2.26 18.607z"
                  fill="url(#emptystate-Error-icon_svg__d-errorIcon)"
                  transform="translate(19.333 53.333)"
                />
                <path
                  d="M5.333 20a1.507 1.507 0 00-1.26.06l-.253.1c-.199.09-.392.19-.58.3C1.42 21.507.507 22.92.5 24.713v.834c-.08.567.118 1.138.533 1.533l.08.04 1.554.88c.446.24 1.16.08 2.126-.473 1.778-1.04 2.667-2.45 2.667-4.227v-.827a1.847 1.847 0 00-.493-1.533l-.107-.06L5.393 20M.94 3.107v6.786l1.4 9.074 1.593.933 1.907-1.113L7.253 8.053l.014-6.72-1.594-.92L.94 3.107z"
                  fill="url(#emptystate-Error-icon_svg__e-errorIcon)"
                  transform="translate(39.333 17.333)"
                />
                <path
                  d="M.127 2.833V9.62l1.413 9.093L3.447 17.6 4.86 6.867V.08z"
                  fill="url(#emptystate-Error-icon_svg__f-errorIcon)"
                  transform="translate(43.333 18)"
                />
                <path
                  d="M2.113 10.98V4.193l4.72-2.726L5.267.52.547 3.253v6.787z"
                  fill="url(#emptystate-Error-icon_svg__g-errorIcon)"
                  transform="translate(41.333 16.667)"
                />
                <path
                  d="M5.153.333a1.48 1.48 0 00-1 0l-.206.06a6.753 6.753 0 00-.82.414C1.309 1.856.393 3.27.38 5.053v.834c-.001.223.017.446.053.666.034.353.219.674.507.88.453.24 1.167.087 2.14-.473 1.778-1.04 2.667-2.449 2.667-4.227v-.78A1.813 1.813 0 005.24.42L5.153.333z"
                  fill="url(#emptystate-Error-icon_svg__h-errorIcon)"
                  transform="translate(42.667 37.333)"
                />
                <path
                  d="M5.28 1.087l.207-.06a1.48 1.48 0 011 0l-1.5-.854A1.513 1.513 0 003.74.22l-.253.113c-.199.09-.393.19-.58.3C1.093 1.68.173 3.1.167 4.887v.78c0 .777.173 1.284.52 1.52l.086.046 1.534.88a1.227 1.227 0 01-.507-.88 3.913 3.913 0 01-.053-.666v-.82c0-1.778.915-3.194 2.746-4.247.253-.155.516-.293.787-.413z"
                  fill="url(#emptystate-Error-icon_svg__i-errorIcon)"
                  transform="translate(41.333 36.667)"
                />
                <path
                  d="M2.113.98L.52.06l1.4 9.073 1.593.92z"
                  fill="url(#emptystate-Error-icon_svg__j-errorIcon)"
                  transform="translate(41.333 26.667)"
                />
                <path
                  d="M38.293 46.947l-.193-.087.193.12z"
                  fill="#A8A8A8"
                />
              </g>
            </svg>
            <h3
              className="iot--empty-state--title"
              data-testid="EmptyState-title"
            >
              Data error.
            </h3>
            <p
              className="iot--empty-state--text"
              data-testid="EmptyState-body"
            >
              API threw Nullpointer
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ImageCard error loading image 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      accept={null}
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="image-hotspots"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Image"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Image
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--empty-state"
          data-testid="EmptyState"
        >
          <div
            className="iot--empty-state--content"
          >
            <svg
              alt=""
              className="iot--empty-state--icon"
              data-testid="EmptyState-icon"
              height={80}
              width={80}
            >
              <defs>
                <linearGradient
                  id="emptystate-Error-icon_svg__a-errorIcon"
                  x1="40.83%"
                  x2="53.752%"
                  y1="147.026%"
                  y2="5.476%"
                >
                  <stop
                    offset="0%"
                    stopColor="#767676"
                  />
                  <stop
                    offset="100%"
                    stopColor="#FFF"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__b-errorIcon"
                  x1="44.373%"
                  x2="66.603%"
                  y1="97.685%"
                  y2="-9.503%"
                >
                  <stop
                    offset="0%"
                    stopColor="#FFF"
                  />
                  <stop
                    offset="100%"
                    stopColor="#FFF"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__c-errorIcon"
                  x1="45.733%"
                  x2="67.978%"
                  y1="91.053%"
                  y2="-16.135%"
                >
                  <stop
                    offset="0%"
                    stopColor="#939393"
                  />
                  <stop
                    offset="100%"
                    stopColor="#DCDCDC"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__d-errorIcon"
                  x1="-52.354%"
                  x2="72.326%"
                  y1="92.68%"
                  y2="51.331%"
                >
                  <stop
                    offset="0%"
                    stopOpacity={0.18}
                  />
                  <stop
                    offset="100%"
                    stopOpacity={0.05}
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__e-errorIcon"
                  x1="55.034%"
                  x2="40.155%"
                  y1="-24.481%"
                  y2="198.063%"
                >
                  <stop
                    offset="0%"
                    stopOpacity={0.2}
                  />
                  <stop
                    offset="100%"
                    stopOpacity={0.5}
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__f-errorIcon"
                  x1="39.23%"
                  x2="48.628%"
                  y1="121.252%"
                  y2="57.245%"
                >
                  <stop
                    offset="0%"
                    stopColor="#BEBEBE"
                  />
                  <stop
                    offset="100%"
                    stopColor="#D8D8D8"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__g-errorIcon"
                  x1="6.81%"
                  x2="49.062%"
                  y1="148.311%"
                  y2="26.577%"
                >
                  <stop
                    offset="0%"
                    stopColor="#CCC"
                  />
                  <stop
                    offset="100%"
                    stopColor="#FFF"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__h-errorIcon"
                  x1="50.263%"
                  x2="50.263%"
                  y1="63.049%"
                  y2="-84.145%"
                >
                  <stop
                    offset="2%"
                    stopColor="#CCC"
                  />
                  <stop
                    offset="100%"
                    stopColor="#EEE"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__i-errorIcon"
                  x1="9731.507%"
                  x2="9762.569%"
                  y1="17393.65%"
                  y2="17462.12%"
                >
                  <stop
                    offset="0%"
                    stopColor="#CCC"
                  />
                  <stop
                    offset="100%"
                    stopColor="#FFF"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Error-icon_svg__j-errorIcon"
                  x1="39.379%"
                  x2="47.452%"
                  y1="-82.789%"
                  y2="18.145%"
                >
                  <stop
                    offset="0%"
                    stopColor="#828282"
                  />
                  <stop
                    offset="100%"
                    stopColor="#C9C9C9"
                  />
                </linearGradient>
              </defs>
              <g
                fill="none"
                fillRule="nonzero"
              >
                <path
                  d="M27.333.84A2.98 2.98 0 0026.18.5a5.153 5.153 0 00-3.013.833A10.747 10.747 0 0020.2 4 15.147 15.147 0 0018 7.76L.933 51.64c-.5 1.25-.773 2.58-.806 3.927a5.06 5.06 0 00.8 2.973c.206.308.466.576.766.793l.134.08c.07.045.144.086.22.12l5.613 3.24a3.093 3.093 0 01-.94-.88 5.04 5.04 0 01-.8-2.78v-.193c.036-1.347.311-2.677.813-3.927l17.06-43.9A15.333 15.333 0 0126 7.273a10.767 10.767 0 012.967-2.606A7.74 7.74 0 0130 4.133a4.547 4.547 0 011.96-.3c.368.03.727.128 1.06.287L27.333.827V.84z"
                  fill="url(#emptystate-Error-icon_svg__a-errorIcon)"
                  transform="translate(14)"
                />
                <path
                  d="M28.667 1.587A3.16 3.16 0 0027.84.78a1.467 1.467 0 00-.2-.127l-.113-.06a3.193 3.193 0 00-1.06-.286 4.547 4.547 0 00-1.96.3 7.74 7.74 0 00-1.034.506A10.767 10.767 0 0020.5 3.747a15.333 15.333 0 00-2.2 3.82L1.207 51.447A11.167 11.167 0 00.4 55.373v.194c-.016.984.26 1.952.793 2.78.247.357.567.657.94.88.39.212.819.34 1.26.373a5.007 5.007 0 002.96-.787l34-19.673a10.973 10.973 0 003.007-2.667 14.433 14.433 0 002.173-3.793c.5-1.236.766-2.554.787-3.887a5.207 5.207 0 00-.773-3.006l-16.88-24.2z"
                  fill="url(#emptystate-Error-icon_svg__b-errorIcon)"
                  transform="translate(19.333 3.333)"
                />
                <path
                  d="M28.827 1.78A3.16 3.16 0 0028 .973a2 2 0 00-.2-.126l-.113-.06A3.04 3.04 0 0026.627.5a4.547 4.547 0 00-1.96.3 7.74 7.74 0 00-1.034.507 10.767 10.767 0 00-2.966 2.633 15.333 15.333 0 00-2.2 3.82L1.4 51.64a11.34 11.34 0 00-.814 3.927v.193c-.01.985.268 1.951.8 2.78a2.827 2.827 0 002.2 1.253 5.007 5.007 0 002.96-.786l34.027-19.674a10.973 10.973 0 003.007-2.666 14.433 14.433 0 002.173-3.794c.5-1.236.766-2.553.787-3.886A5.207 5.207 0 0045.767 26L28.827 1.78z"
                  fill="url(#emptystate-Error-icon_svg__c-errorIcon)"
                  transform="translate(19.333 3.333)"
                />
                <path
                  d="M2.26 18.607c-2.284 1.333-2.284 2.666 0 4l4.513 2.606a6.42 6.42 0 006.867 0l29.887-17.32c2.293-1.333 2.293-2.666 0-4l-4.514-2.56a6.433 6.433 0 00-6.873 0L2.26 18.607z"
                  fill="url(#emptystate-Error-icon_svg__d-errorIcon)"
                  transform="translate(19.333 53.333)"
                />
                <path
                  d="M5.333 20a1.507 1.507 0 00-1.26.06l-.253.1c-.199.09-.392.19-.58.3C1.42 21.507.507 22.92.5 24.713v.834c-.08.567.118 1.138.533 1.533l.08.04 1.554.88c.446.24 1.16.08 2.126-.473 1.778-1.04 2.667-2.45 2.667-4.227v-.827a1.847 1.847 0 00-.493-1.533l-.107-.06L5.393 20M.94 3.107v6.786l1.4 9.074 1.593.933 1.907-1.113L7.253 8.053l.014-6.72-1.594-.92L.94 3.107z"
                  fill="url(#emptystate-Error-icon_svg__e-errorIcon)"
                  transform="translate(39.333 17.333)"
                />
                <path
                  d="M.127 2.833V9.62l1.413 9.093L3.447 17.6 4.86 6.867V.08z"
                  fill="url(#emptystate-Error-icon_svg__f-errorIcon)"
                  transform="translate(43.333 18)"
                />
                <path
                  d="M2.113 10.98V4.193l4.72-2.726L5.267.52.547 3.253v6.787z"
                  fill="url(#emptystate-Error-icon_svg__g-errorIcon)"
                  transform="translate(41.333 16.667)"
                />
                <path
                  d="M5.153.333a1.48 1.48 0 00-1 0l-.206.06a6.753 6.753 0 00-.82.414C1.309 1.856.393 3.27.38 5.053v.834c-.001.223.017.446.053.666.034.353.219.674.507.88.453.24 1.167.087 2.14-.473 1.778-1.04 2.667-2.449 2.667-4.227v-.78A1.813 1.813 0 005.24.42L5.153.333z"
                  fill="url(#emptystate-Error-icon_svg__h-errorIcon)"
                  transform="translate(42.667 37.333)"
                />
                <path
                  d="M5.28 1.087l.207-.06a1.48 1.48 0 011 0l-1.5-.854A1.513 1.513 0 003.74.22l-.253.113c-.199.09-.393.19-.58.3C1.093 1.68.173 3.1.167 4.887v.78c0 .777.173 1.284.52 1.52l.086.046 1.534.88a1.227 1.227 0 01-.507-.88 3.913 3.913 0 01-.053-.666v-.82c0-1.778.915-3.194 2.746-4.247.253-.155.516-.293.787-.413z"
                  fill="url(#emptystate-Error-icon_svg__i-errorIcon)"
                  transform="translate(41.333 36.667)"
                />
                <path
                  d="M2.113.98L.52.06l1.4 9.073 1.593.92z"
                  fill="url(#emptystate-Error-icon_svg__j-errorIcon)"
                  transform="translate(41.333 26.667)"
                />
                <path
                  d="M38.293 46.947l-.193-.087.193.12z"
                  fill="#A8A8A8"
                />
              </g>
            </svg>
            <h3
              className="iot--empty-state--title"
              data-testid="EmptyState-title"
            >
              Data error.
            </h3>
            <p
              className="iot--empty-state--text"
              data-testid="EmptyState-body"
            >
              Error no image found called ImageID
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ImageCard hotspots are loading 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      accept={null}
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="image-hotspots"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Image"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Image
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--image-card__wrapper"
        >
          <div
            onBlur={[Function]}
            onMouseOut={[Function]}
            style={
              Object {
                "background": "#eee",
                "height": "100%",
                "overflow": "hidden",
                "position": "relative",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="Sample image"
              className="iot--image-card-img"
              id={null}
              onLoad={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              onMouseUp={[Function]}
              src="landscape.jpg"
              style={
                Object {
                  "cursor": "auto",
                  "height": "auto",
                  "left": undefined,
                  "objectFit": null,
                  "position": "relative",
                  "top": undefined,
                  "width": "auto",
                }
              }
            />
            <div
              aria-live="assertive"
              className="bx--inline-loading"
              style={
                Object {
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <div
                className="bx--inline-loading__animation"
              >
                <div
                  aria-atomic="true"
                  aria-labelledby="loading-id-7"
                  aria-live="assertive"
                  className="bx--loading bx--loading--small"
                >
                  <label
                    className="bx--visually-hidden"
                    id="loading-id-7"
                  >
                    Active loading indicator
                  </label>
                  <svg
                    className="bx--loading__svg"
                    viewBox="0 0 100 100"
                  >
                    <title>
                      Active loading indicator
                    </title>
                    <circle
                      className="bx--loading__background"
                      cx="50%"
                      cy="50%"
                      r="44"
                    />
                    <circle
                      className="bx--loading__stroke"
                      cx="50%"
                      cy="50%"
                      r="44"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="bx--inline-loading__text"
              >
                Loading hotspot data...
              </div>
            </div>
            <div
              style={
                Object {
                  "bottom": 10,
                  "pointerEvents": "auto",
                  "position": "absolute",
                  "right": 10,
                }
              }
            >
              <button
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "background": "#fff",
                    "border": "none",
                    "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                    "display": "flex",
                    "height": "25px",
                    "justifyContent": "center",
                    "width": "25px",
                  }
                }
                title="Zoom in"
                type="button"
              >
                +
              </button>
              <button
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "background": "#fff",
                    "border": "none",
                    "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                    "display": "flex",
                    "height": "25px",
                    "justifyContent": "center",
                    "width": "25px",
                  }
                }
                title="Zoom out"
                type="button"
              >
                -
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ImageCard image upload error 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      accept={null}
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="image-hotspots"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Image"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Image
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        />
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--image-card__wrapper"
        >
          <div
            className="iot--image-uploader iot--image-uploader__medium"
            data-testid="Card-image-uploader"
          >
            <div
              className="bx--file"
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
            >
              <label
                className="bx--file-browse-btn"
                data-testid="Card-image-uploader-file-drop-container"
                htmlFor="id16"
                onKeyDown={[Function]}
                size="field"
                tabIndex={0}
              >
                <div
                  className="bx--file__drop-container"
                  role="button"
                >
                  
                </div>
                <input
                  accept={Array []}
                  className="bx--file-input"
                  id="id16"
                  multiple={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex="-1"
                  type="file"
                />
              </label>
            </div>
            <div
              className="iot--image-uploader-icon"
            >
              <svg
                aria-hidden={true}
                fill="currentColor"
                focusable="false"
                height={32}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19,14a3,3,0,1,0-3-3A3,3,0,0,0,19,14Zm0-4a1,1,0,1,1-1,1A1,1,0,0,1,19,10Z"
                />
                <path
                  d="M26,4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2H26a2,2,0,0,0,2-2V6A2,2,0,0,0,26,4Zm0,22H6V20l5-5,5.59,5.59a2,2,0,0,0,2.82,0L21,19l5,5Zm0-4.83-3.59-3.59a2,2,0,0,0-2.82,0L18,19.17l-5.59-5.59a2,2,0,0,0-2.82,0L6,17.17V6H26Z"
                />
              </svg>
            </div>
            <div
              className="iot--image-uploader-content"
            >
              <h2
                className="iot--image-uploader-drop-label-text"
              >
                Drag file here or click to upload file
              </h2>
              <p
                className="iot--image-uploader-drop-description-text"
              >
                Max file size is 1MB. Supported file types are: APNG, AVIF, GIF, JPEG, PNG, WebP
              </p>
              <button
                aria-describedby={null}
                aria-pressed={null}
                className="iot--btn bx--btn bx--btn--sm bx--btn--tertiary"
                data-testid="Button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
                type="button"
              >
                Add from gallery
              </button>
              <button
                aria-describedby={null}
                aria-pressed={null}
                className="iot--btn bx--btn bx--btn--sm bx--btn--tertiary"
                data-testid="Button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
                type="button"
              >
                Insert from URL
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ImageCard isEditable (experimental) 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      accept={null}
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="image-hotspots"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Image"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Image
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        />
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--image-card__wrapper"
        >
          <div
            className="iot--image-uploader iot--image-uploader__medium"
            data-testid="Card-image-uploader"
          >
            <div
              className="bx--file"
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
            >
              <label
                className="bx--file-browse-btn"
                data-testid="Card-image-uploader-file-drop-container"
                htmlFor="id14"
                onKeyDown={[Function]}
                size="field"
                tabIndex={0}
              >
                <div
                  className="bx--file__drop-container"
                  role="button"
                >
                  
                </div>
                <input
                  accept={Array []}
                  className="bx--file-input"
                  id="id14"
                  multiple={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex="-1"
                  type="file"
                />
              </label>
            </div>
            <div
              className="iot--image-uploader-icon"
            >
              <svg
                aria-hidden={true}
                fill="currentColor"
                focusable="false"
                height={32}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19,14a3,3,0,1,0-3-3A3,3,0,0,0,19,14Zm0-4a1,1,0,1,1-1,1A1,1,0,0,1,19,10Z"
                />
                <path
                  d="M26,4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2H26a2,2,0,0,0,2-2V6A2,2,0,0,0,26,4Zm0,22H6V20l5-5,5.59,5.59a2,2,0,0,0,2.82,0L21,19l5,5Zm0-4.83-3.59-3.59a2,2,0,0,0-2.82,0L18,19.17l-5.59-5.59a2,2,0,0,0-2.82,0L6,17.17V6H26Z"
                />
              </svg>
            </div>
            <div
              className="iot--image-uploader-content"
            >
              <h2
                className="iot--image-uploader-drop-label-text"
              >
                Drag file here or click to upload file
              </h2>
              <p
                className="iot--image-uploader-drop-description-text"
              >
                Max file size is 1MB. Supported file types are: APNG, AVIF, GIF, JPEG, PNG, WebP
              </p>
              <button
                aria-describedby={null}
                aria-pressed={null}
                className="iot--btn bx--btn bx--btn--sm bx--btn--tertiary"
                data-testid="Button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
                type="button"
              >
                Add from gallery
              </button>
              <button
                aria-describedby={null}
                aria-pressed={null}
                className="iot--btn bx--btn bx--btn--sm bx--btn--tertiary"
                data-testid="Button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
                type="button"
              >
                Insert from URL
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/ImageCard with displayOptions 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      accept={null}
      className="iot--card iot--card--wrapper"
      data-testid="Card"
      id="image-hotspots"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Image"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Image
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--image-card__wrapper"
        >
          <div
            onBlur={[Function]}
            onMouseOut={[Function]}
            style={
              Object {
                "background": "#eee",
                "height": "100%",
                "overflow": "hidden",
                "position": "relative",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="Sample image"
              className="iot--image-card-img"
              id={null}
              onLoad={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              onMouseUp={[Function]}
              src="landscape.jpg"
              style={
                Object {
                  "cursor": "auto",
                  "height": "auto",
                  "left": undefined,
                  "objectFit": null,
                  "position": "relative",
                  "top": undefined,
                  "width": "auto",
                }
              }
            />
            <div
              data-testid="null-hotspots-container"
              style={
                Object {
                  "left": undefined,
                  "margin": "auto",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "right": "auto",
                }
              }
            >
              <div
                className="iot--hotspot-container iot--hotspot-container--is-fixed"
                data-testid="hotspot-0-0"
                icon={null}
                style={
                  Object {
                    "--height": 20,
                    "--width": 20,
                    "--x-pos": 0,
                    "--y-pos": 0,
                  }
                }
              >
                <div
                  aria-labelledby="hotspot-0-0"
                  className="bx--tooltip__label"
                  id="hotspot-0-0"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    height={20}
                    width={20}
                  >
                    <circle
                      cx={10}
                      cy={10}
                      fill="none"
                      opacity="1"
                      r={9}
                      stroke="white"
                      strokeWidth="2"
                    />
                    <circle
                      cx={10}
                      cy={10}
                      fill="green"
                      opacity="0.7"
                      r={9}
                      stroke="none"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="iot--hotspot-container iot--hotspot-container--is-fixed"
                data-testid="hotspot-0-99.99"
                icon={null}
                style={
                  Object {
                    "--height": 20,
                    "--width": 20,
                    "--x-pos": 0,
                    "--y-pos": 99.99,
                  }
                }
              >
                <div
                  aria-labelledby="hotspot-0-99.99"
                  className="bx--tooltip__label"
                  id="hotspot-0-99.99"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    height={20}
                    width={20}
                  >
                    <circle
                      cx={10}
                      cy={10}
                      fill="none"
                      opacity="1"
                      r={9}
                      stroke="white"
                      strokeWidth="2"
                    />
                    <circle
                      cx={10}
                      cy={10}
                      fill="green"
                      opacity="0.7"
                      r={9}
                      stroke="none"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="iot--hotspot-container iot--hotspot-container--is-fixed"
                data-testid="hotspot-99.99-99.99"
                icon={null}
                style={
                  Object {
                    "--height": 20,
                    "--width": 20,
                    "--x-pos": 99.99,
                    "--y-pos": 99.99,
                  }
                }
              >
                <div
                  aria-labelledby="hotspot-99.99-99.99"
                  className="bx--tooltip__label"
                  id="hotspot-99.99-99.99"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    height={20}
                    width={20}
                  >
                    <circle
                      cx={10}
                      cy={10}
                      fill="none"
                      opacity="1"
                      r={9}
                      stroke="white"
                      strokeWidth="2"
                    />
                    <circle
                      cx={10}
                      cy={10}
                      fill="green"
                      opacity="0.7"
                      r={9}
                      stroke="none"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="iot--hotspot-container iot--hotspot-container--is-fixed"
                data-testid="hotspot-99.99-0"
                icon={null}
                style={
                  Object {
                    "--height": 20,
                    "--width": 20,
                    "--x-pos": 99.99,
                    "--y-pos": 0,
                  }
                }
              >
                <div
                  aria-labelledby="hotspot-99.99-0"
                  className="bx--tooltip__label"
                  id="hotspot-99.99-0"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    height={20}
                    width={20}
                  >
                    <circle
                      cx={10}
                      cy={10}
                      fill="none"
                      opacity="1"
                      r={9}
                      stroke="white"
                      strokeWidth="2"
                    />
                    <circle
                      cx={10}
                      cy={10}
                      fill="green"
                      opacity="0.7"
                      r={9}
                      stroke="none"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "bottom": 10,
                  "pointerEvents": "auto",
                  "position": "absolute",
                  "right": 10,
                }
              }
            >
              <button
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "background": "#fff",
                    "border": "none",
                    "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                    "display": "flex",
                    "height": "25px",
                    "justifyContent": "center",
                    "width": "25px",
                  }
                }
                title="Zoom in"
                type="button"
              >
                +
              </button>
              <button
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "background": "#fff",
                    "border": "none",
                    "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                    "display": "flex",
                    "height": "25px",
                    "justifyContent": "center",
                    "width": "25px",
                  }
                }
                title="Zoom out"
                type="button"
              >
                -
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
